task view component's ui is finished

--- a/frontend/src/main-styles.scss
+++ b/frontend/src/main-styles.scss
@@ -13,7 +13,7 @@ $light: #f8f8f8;
 //Updating Bulma's global variables
 $family-san-serif: "Nunito", san-serif;
 $primary: $green;
-$link: $light-green;
+$link: $turquoise;
 
 //Updating some of Bulma's Components
 $control-border-width: 2px;
