--- a/frontend/src/app/pages/task-view/task-view.component.html
+++ b/frontend/src/app/pages/task-view/task-view.component.html
@@ -5,21 +5,13 @@
         List
       </h1>
       <div class="list-menu">
-        <a class="list-menu-item is-active">
-          <p>MEAN Stack List</p>
-        </a>
-        <a class="list-menu-item">
-          <p>Exercise List</p>
-        </a>
-        <a class="list-menu-item">
-          <p>Video Editing List</p>
-        </a>
-        <a class="list-menu-item">
-          <p>Grocery List</p>
+
+        <a class="list-menu-item" *ngFor="let list of lists" [routerLink]="['/lists', list._id]" routerLinkActive="is-active">
+          <p>{{ list.title }}</p>
         </a>
       </div>
 
-      <button class="button is-primary has-text-white">+ New List</button>
+      <button class="button is-primary has-text-white" routerLink="/new-list">+ New List</button>
 
     </div>
 
@@ -28,14 +20,15 @@
         Task
       </h1>
       <div class="task completed">
-        <p >Have to finish front end today</p>
+        <p >Example</p>
       </div>
-      <div class="task">
-        <p>Also finish api endpoints with express</p>
+      <div class="task" *ngFor="let task of tasks">
+        <p> {{ task.title }} </p>
       </div>
-      <div class="task">
-        <p>Get that break, switch to exercise list</p>
-      </div>
+
+      <button class=" button circle-add-button has-text-white is-primary">
+        <img src="../../../assets/plus-icon.svg" alt="">
+      </button>
     </div>
   </div>
 </div>
