--- a/frontend/src/app/pages/task-view/task-view.component.scss
+++ b/frontend/src/app/pages/task-view/task-view.component.scss
@@ -1,19 +1,12 @@
 @import '../../../main-styles.scss';
 
-.centered-content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
-
 .task-manager-container {
    display: flex;
    width: 100%;
    height: 100%;
    max-width: 1000px;
    max-height: 680px;
+   position: relative;
 }
 
 .sidebar {
@@ -89,4 +82,14 @@
     text-decoration: line-through;
     opacity: 0.8;
   }
+}
+
+.circle-add-button {
+  height: 50px;
+  width: 50px;
+  position: absolute;
+  bottom: 35px;
+  right: 35px;
+  border: none;
+  border-radius: 50%;
 }
