--- a/frontend/src/app/pages/new-list/new-list.component.html
+++ b/frontend/src/app/pages/new-list/new-list.component.html
@@ -1,9 +1,9 @@
 <div class="centered-content">
   <div class="modal-box">
     <h1 class="title">
-      Create a new list!
+      Create a new list
     </h1>
-        <input #listTitleInput class="input has-background-light is-medium" type="text" placeholder="Enter new list name...">
+        <input #listTitleInput class="input has-background-light is-medium" type="text" placeholder="Enter new list name..." (keydown.enter)="createNewList(listTitleInput.value)">
 <br><br>
     <div class="buttons is-right">
       <button class="button" routerLink="/">Cancel</button>
