--- a/frontend/src/app/pages/task-view/task-view.component.html
+++ b/frontend/src/app/pages/task-view/task-view.component.html
@@ -6,20 +6,22 @@
       </h1>
       <div class="list-menu">
 
+      <!-- List Elements -->
         <a class="list-menu-item" *ngFor="let list of lists" [routerLink]="['/lists', list._id]" routerLinkActive="is-active">
           <p>{{ list.title }}</p>
         </a>
       </div>
 
       <button class="button is-primary has-text-white" routerLink="/new-list">+ New List</button>
-
     </div>
 
     <div class="task-list-container has-background-light">
       <h1 class="title has-text-primary">
         Task
       </h1>
-      <div class="task" *ngFor="let task of tasks">
+
+      <!-- Task Elements -->
+      <div class="task" *ngFor="let task of tasks" (click)="onTaskClick(task)" [ngClass]="{ 'completed': task.completed }">
         <p> {{ task.title }} </p>
       </div>
 
