--- a/frontend/src/app/pages/task-view/task-view.component.scss
+++ b/frontend/src/app/pages/task-view/task-view.component.scss
@@ -65,7 +65,7 @@
   border-radius: 5px;
   margin-top: 10px;
 
-  &:not(.completed){
+  &:not(.complete) {
     cursor: pointer;
     transition: box-shadow 0.2 ease, transform 0.2 ease;
 
