--- a/frontend/src/app/pages/new-list/new-list.component.html
+++ b/frontend/src/app/pages/new-list/new-list.component.html
@@ -1,12 +1,12 @@
 <div class="centered-content">
   <div class="modal-box">
-    <h1 class="title">
+    <h1 class="title has-text-primary">
       Create a new list
     </h1>
         <input #listTitleInput class="input has-background-light is-medium" type="text" placeholder="Enter new list name..." (keydown.enter)="createNewList(listTitleInput.value)">
 <br><br>
     <div class="buttons is-right">
-      <button class="button" routerLink="/">Cancel</button>
+      <button class="button has-text-grey" routerLink="../">Cancel</button>
       <button class="button is-primary has-text-white" (click)="createNewList(listTitleInput.value)">Create</button>
     </div>
   </div>
