--- a/frontend/src/main-styles.scss
+++ b/frontend/src/main-styles.scss
@@ -13,12 +13,8 @@ $light: #f8f8f8;
 //Updating Bulma's global variables
 $family-san-serif: "Nunito", san-serif;
 $primary: $green;
+$link: $primary;
 
-//bulma var isnt getting updated for some reason???
-$link: $turquoise;
-a {
-  color: $turquoise;
-}
 
 //Updating some of Bulma's Components
 $control-border-width: 2px;
@@ -51,3 +47,11 @@ html, body {
   padding: 35px;
 }
 
+.title {
+  font-family: Lato;
+  font-size: 24px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+@import '../node_modules/bulma/bulma.sass';
