--- a/frontend/src/app/pages/login-page/login-page.component.html
+++ b/frontend/src/app/pages/login-page/login-page.component.html
@@ -6,7 +6,7 @@
     <div class="title">
       <div class="field">
         <p class="control has-icons-left has-icons-right">
-          <input class="input has-background-light" type="email" placeholder="Email">
+          <input #email class="input has-background-light" type="email" placeholder="Email">
           <span class="icon is-small is-left">
             <i class="fas fa-envelope"></i>
           </span>
@@ -14,7 +14,7 @@
       </div>
       <div class="field">
         <p class="control has-icons-left">
-          <input class="input has-background-light" type="password" placeholder="Password">
+          <input #password class="input has-background-light" type="password" placeholder="Password">
           <span class="icon is-small is-left">
             <i class="fas fa-lock"></i>
           </span>
@@ -22,7 +22,7 @@
       </div>
       <div class="field is-pulled-right">
         <p class="control">
-          <button class="button is-success">
+          <button class="button is-success" (click)="loginClick(email.value, password.value)">
             Login
           </button>
         </p>
