created sign up page and reroutes to the list view, also fixed a few bugs

--- a/frontend/src/main-styles.scss
+++ b/frontend/src/main-styles.scss
@@ -54,4 +54,10 @@ html, body {
   letter-spacing: 2px;
 }
 
+.white-box {
+  padding: 35px;
+  background: white;
+  border-radius: 5px;
+}
+
 @import '../node_modules/bulma/bulma.sass';
