--- a/frontend/src/app/pages/login-page/login-page.component.html
+++ b/frontend/src/app/pages/login-page/login-page.component.html
@@ -1,5 +1,5 @@
 <div class="centered-content">
-  <div class="login-box">
+  <div class="white-box">
     <h1 class="title has-text-primary">
       Login
     </h1>
@@ -20,9 +20,10 @@
           </span>
         </p>
       </div>
+      <i routerLink="/signup" class="fa fa-exchange-alt has-text-primary" style="opacity: 0.7; transform: scale(0.8); margin-top:10px;" aria-hidden="true"></i>
       <div class="field is-pulled-right">
         <p class="control">
-          <button class="button is-success" (click)="loginClick(email.value, password.value)">
+          <button class="button is-success has-text-white" (click)="loginClick(email.value, password.value)">
             Login
           </button>
         </p>
