--- a/frontend/src/app/pages/signup-page/signup-page.component.html
+++ b/frontend/src/app/pages/signup-page/signup-page.component.html
@@ -14,7 +14,7 @@
         </div>
         <div class="field">
           <p class="control has-icons-left">
-            <input #password class="input has-background-light" type="password" placeholder="Password">
+            <input #password class="input has-background-light" type="password" placeholder="Password" (keydown.enter)="signupClick(email.value, password.value)">
             <span class="icon is-small is-left">
               <i class="fas fa-lock"></i>
             </span>
